name:            wai-frontend-monad
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Monadic interface for writing WAI route handlers
description:     Please see README.md
category:        Web
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://github.com/yesodweb/wai
extra-source-files:
  ChangeLog.md
  README.md

library
    build-depends:   base                  >= 4.3      && < 5
                   , http-types
                   , time                  >= 1.1.4
                   , wai                   >= 3.0
                   , wai-extra             >= 3.0.7
                   , bytestring            >= 0.10
                   , text                  >= 0.7
                   , transformers          >= 0.2.2
                   , mtl
                   , case-insensitive
                   , resourcet
                   , monad-logger
                   , transformers-base
                   , exceptions
                   , monad-control
                   , word8
                   , aeson
                   , blaze-html

    exposed-modules: Network.Wai.Frontend.Monad.Content
                     Network.Wai.Frontend.Monad.Conversion
                     Network.Wai.Frontend.Monad.Functions
                     Network.Wai.Frontend.Monad.Handler
                     Network.Wai.Frontend.Monad.Internal
    other-modules:   Paths_wai_frontend_monad

    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/wai
